tests/core/ill-typed/unexpected-type-for-expression/bad-if-2.stella
language core;

fn main(x : Nat) -> Nat {
    return if false then true else 0;
}